--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2015-10-09  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION: Updates to DESCRIPTION (per R CMD check)
+	* NAMESPACE: Ditto
+
 2014-01-07  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: Version 0.0.6
