--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2016-07-17  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION: Version 0.0.7
+
+	* src/allreduce.cc (all_reduce_init): Use ::bind()
+	* src/parse_regressor.cc (save_predictor): Use delete[] with new[]
+
 2015-10-12  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/R_vw.cpp: Comment-out gd.h header which is not needed
