--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2018-01-23  Dirk Eddelbuettel  <edd@debian.org>
 
-	* DESCRIPTION (Version, Date): New minor version
+	* DESCRIPTION (Version, Date): Release 0.0.11
 
 	* tests/test1.r: Set --cache_file to be witin tempdir() [CRAN request]
 	* tests/test2.r: Idem
