--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2018-02-01  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Release 0.0.12
+
+	* src/active_interactor.cc: Minor edit to squash g++ warning
+	* src/bfgs.cc: Idem
+
 2018-01-30  Dirk Eddelbuettel  <edd@debian.org>
 
 	* tests/test1.r: Output written by -f to be witin tempdir() [CRAN]
