--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019-06-19  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Author): Use name without email as in other packages
+
 2019-02-21  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.0.13
