--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2020-06-12  Dirk Eddelbuettel  <edd@debian.org>
+2020-06-13  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.0.14
 
@@ -10,7 +10,7 @@
 	* src/accumulate.cc: Idem
 
 	* configure.ac: Renamed from configure.in, also retired long-obsolete Rcpp
-	linker flags check
+	linker flags check, commented out two more lines
 	* configure: Regenerated
 
 	* README.md: Add 'last commit' badge, also mention rvw-org/rvw and
