--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2020-07-27  Dirk Eddelbuettel  <edd@debian.org>
 
+	* DESCRIPTION (Version, Date): Release 0.0.15
+	* configure: Idem
+
 	* src/sender.cc: Renamed variable from 'thread' to 'threads' to not
 	confuse poor Solaris, and make it 'extern' while we are at it
 
