--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2021-10-09  Dirk Eddelbuettel  <edd@debian.org>
+
+	* configure.ac: Updated via 'autoupdate' and 'autoreconf
+	--warnings=obsolete' to bring to autoconf 2.69 standards
+	* configure: Idem
+
+	* man/vw.Rd: Updated one URL to https
+	* DESCRIPTION: Idem
+
 2021-06-01  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (URL): Add repo to URL field
