Roll minor version

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,16 @@
 2022-12-26  Dirk Eddelbuettel  <edd@debian.org>
 
+	* DESCRIPTION (Version, Date): Roll minor version
+	* configure.ac: Idem
+	* configure: Idem
+
 	* src/global_data.cc: Switch multiple sprintf() to snprintf()
 	* src/parse_regressor.cc: Idem
 	* src/gd.cc: Switch once to snprintf() (and once to strncpy())
 	* src/parser.cc: No longer permit 'multisource' or 'global.daemon'
 	options and hence no longer enter daemon mode
+
+	* cleanup: Also remove package check directory if present
 
 2022-12-01  Dirk Eddelbuettel  <edd@debian.org>
 
