--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2023-08-22  Dirk Eddelbuettel  <edd@debian.org>
+
+	* README.md: Update README for 'no-longer-on-CRAN'
+
 2023-01-07  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.0.18
