Switch ci.yaml to actions/checkout@v6

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2026-02-04  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .github/workflows/ci.yaml: Switch to actions/checkout@v6
+
 2025-09-28  Dirk Eddelbuettel  <edd@debian.org>
 
 	* .github/workflows/ci.yaml: Use r-ci with embedded bootstrap
